[profile.dev]
panic = "abort"

[workspace]
resolver="1"
members = [
	"jsonrpc",
	"libnvme-rs",
	"io-engine",
	"io-engine-bench",
	"io-engine-tests",
	"rpc/mayastor-api",
	"sysfs",
	"spdk-rs",
	"utils/io-engine-dependencies/version-info",
	"utils/io-engine-dependencies/composer",
	"utils/io-engine-dependencies/devinfo",
	"utils/io-engine-dependencies/nvmeadm",
]
