[profile.dev]
panic = "abort"

[workspace]
resolver="1"
members = [
	"jsonrpc",
	"libnvme-rs",
	"io-engine",
	"io-engine-bench",
	"io-engine-tests",
	"sysfs",
	"spdk-rs",
	"utils/dependencies/apis/io-engine",
	"utils/dependencies/prost-extend",
	"utils/dependencies/version-info",
	"utils/dependencies/composer",
	"utils/dependencies/devinfo",
	"utils/dependencies/nvmeadm",
]
