[package]
name = "cli"
version = "0.1.0"
authors = ["Jan Kryl <jan.kryl@mayadata.io>", "Jeffry Molanus <jeffry.molanus@mayadata.io>"]
edition = "2018"
[[bin]]
name = "dumb"
path = "src/main.rs"

[[bin]]
name = "mctl"
path = "src/mctl.rs"

[dependencies]
clap = "2.33.0"
futures = "0.1"
jsonrpc-core = "13.0.0"
rpc = { path = "../rpc"}
jsonrpc-client-transports = { version = "13.0.0", features = ["ipc"] }
serde = "1.0.98"
serde_json = "1.0"
structopt = "0.2.18"
tokio = "0.1"
byte-unit = "3.0.1"

