[package]
name = "cli"
version = "0.1.0"
authors = ["Jan Kryl <jan.kryl@mayadata.io>", "Jeffry Molanus <jeffry.molanus@mayadata.io>"]
edition = "2018"
#[[bin]]
#name = "dumb"
#path = "src/main.rs"

[[bin]]
name = "mctl"
path = "src/mctl.rs"

[dependencies]
clap = "2.33.0"
rpc = { path = "../rpc"}
serde = "1.0.98"
serde_json = "1.0"
structopt = "0.2.18"
byte-unit = "3.0.1"
tokio = "0.2.0-alpha.6"
tokio-net = "0.2.0-alpha.6"
jsonrpc = { path = "../jsonrpc"}
