[package]
name = "composer"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.8"
tonic = "0.4"
crossbeam = "0.7.3"
rpc = { path = "../rpc" }
ipnetwork = "0.17.0"
bollard = "0.10.0"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
mbus_api = { path = "../mbus-api" }
