[package]
name = "composer"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
futures = "0.3.16"
tonic = "0.5.2"
rpc = { path = "../rpc" }
ipnetwork = "0.18.0"
bollard = "0.11.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
