[package]
authors = ["Jan Kryl <jan.kryl@mayadata.io>", "Jeffry Molanus <jeffry.molanus@mayadata.io"]
name = "csi"
version = "0.2.0"
edition = "2018"

[[bin]]
name = "mayastor-csi"
path = "src/server.rs"

[build-dependencies]
bytes = "0.5"
tonic-build = "0.4"
prost-build = "0.7"

[dependencies]
async-trait = "0.1.36"
async-stream = "0.3.0"
bytes = "0.5"
bytesize = "1.0.0"
chrono = "0.4.9"
clap = "2.33.0"
env_logger = "0.7"
failure = "0.1"
futures = { version = "0.3", default-features = false }
git-version = "0.3.1"
glob = "*"
http = "0.2"
http-body = "0.2"
itertools = "0.9"
lazy_static = "1.4.0"
libc = "0.2"
loopdev = "*"
nix = "0.16"
nvmeadm = { path = "../nvmeadm", version = "0.1.0" }
once_cell = "1.3.1"
proc-mounts = "0.2"
prost = "0.7"
prost-derive = "0.7"
prost-types = "0.7"
regex = "1.3.6"
serde_json = "1.0.40"
snafu =  "0.6"
sys-mount = "1.2"
sysfs = { path = "../sysfs", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.3", features = ["net"] }
run_script = "*"
tonic = "0.4"
tower = "0.4.5"
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.0"
udev = "0.4"
url = "2.1.1"
uuid = { version = "0.7", features = ["v4"] }
which = "3.1.1"

[dependencies.blkid]
branch = "blkid-sys"
git = "https://github.com/openebs/blkid"

