[package]
authors = ["Jan Kryl <jan.kryl@mayadata.io>", "Jeffry Molanus <jeffry.molanus@mayadata.io"]
name = "csi"
version = "1.0.0"
edition = "2018"

[[bin]]
name = "mayastor-csi"
path = "src/server.rs"

[build-dependencies]
tonic-build = "0.5.2"
prost-build = "0.8.0"
[dependencies]
async-trait = "0.1.51"
async-stream = "0.3.2"
chrono = "0.4.19"
clap = "2.33.3"
env_logger = "0.9.0"
failure = "0.1.8"
futures = { version = "0.3.16", default-features = false }
glob = "0.3.0"
lazy_static = "1.4.0"
nvmeadm = { path = "../nvmeadm" }
proc-mounts = "0.2.4"
prost = "0.8.0"
prost-derive = "0.8.0"
prost-types = "0.8.0"
regex = "1.5.4"
serde_json = "1.0.66"
snafu = "0.6.10"
sys-mount = "1.3.0"
sysfs = { path = "../sysfs" }
tokio = { version = "1.10.0", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
tonic = "0.5.2"
tower = "0.4.8"
tracing = "0.1.26"
tracing-futures = "0.2.5"
udev = "0.6.2"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
which = "4.2.2"
devinfo = { path = "../devinfo"}

