[package]
name = "io-engine-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.12.0", features = [ "full" ] }
chrono = "0.4.19"
env_logger = "0.9.0"
futures = "0.3.16"
once_cell = "1.8.0"
tonic = "0.5.2"
tracing = "0.1.26"
tracing-core = "0.1.19"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.20"
url = "2.2.2"
crossbeam = "0.8.1"
uuid = { version = "0.8.2", features = ["v4"] }
run_script = "0.8.0"
rpc = { path = "../rpc" }
io-engine = { path = "../io-engine" }
composer = { path = "../composer" }
spdk-rs = { path = "../spdk-rs" }
criterion = { version = "0.3.5", features = [ "async_tokio" ] }

[[bench]]
name = "nexus"
path = "src/nexus.rs"
harness = false
