[package]
name = "io-engine-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.33.0", features = [ "full" ] }
chrono = "0.4.31"
env_logger = "0.10.0"
futures = "0.3.28"
once_cell = "1.18.0"
tonic = "0.10.2"
tracing = "0.1.37"
tracing-core = "0.1.31"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.17"
url = "2.4.1"
crossbeam = "0.8.2"
uuid = { version = "1.4.1", features = ["v4"] }
run_script = "0.10.1"
io-engine-api = { path = "../utils/dependencies/apis/io-engine" }
io-engine = { path = "../io-engine" }
composer = { path = "../utils/dependencies/composer" }
spdk-rs = { path = "../spdk-rs" }
io-engine-tests = { path = "../io-engine-tests" }
libnvme-rs = { path = "../libnvme-rs", version = "0.1.0" }
criterion = { version = "0.5.1", features = [ "async_tokio" ] }

[[bench]]
name = "nexus"
path = "src/nexus.rs"
harness = false
