[package]
name = "io-engine-tests"
description = "I/O test support library"
version = "0.1.0"
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
assert_matches = "1.5.0"
async-channel = "1.6.1"
async-task = "4.0.3"
async-trait = "0.1.51"
atty = "0.2.14"
bincode = "1.3.3"
byte-unit = "4.0.12"
bytes = "1.0.1"
chrono = "0.4.19"
clap = "2.33.3"
colored_json = "2.1.0"
crc = "1.8.1"
crossbeam = "0.8.1"
crossbeam-sync = "0.0.0"
dns-lookup = "1.0.8"
env_logger = "0.9.0"
etcd-client = "0.7.1"
function_name = "0.3.0"
futures = "0.3.16"
hex = "0.4.3"
http = "0.2.4"
io-uring = "0.5.1"
ioctl-gen = "0.1.1"
jsonrpc = { path = "../jsonrpc"}
lazy_static = "1.4.0"
libc = "0.2.99"
log = "0.4.14"
md5 = "0.7.0"
merge = "0.1.0"
nix = "0.22.1"
once_cell = "1.8.0"
parking_lot = "0.11.1"
pin-utils = "0.1.0"
proc-mounts = "0.2.4"
prost = "0.11.6"
prost-derive = "0.11.6"
prost-types = "0.11.6"
rand = "0.8.4"
rand_chacha = "0.3.1"
regex = "1.5.4"
run_script = "0.8.0"
serde_json = "1.0.66"
serde_yaml = "0.8.18"
sha2 = "0.10.2"
signal-hook = "0.3.9"
snafu = "0.7.1"
structopt = "0.3.22"
tonic = "0.8.3"
tower = "0.4.8"
tracing = "0.1.26"
tracing-core = "0.1.19"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.20"
udev = "0.6.2"
url = "2.2.2"

composer = { path = "../utils/io-engine-dependencies/composer" }
libnvme-rs = { path = "../libnvme-rs" }
mayastor-api = { path = "../rpc/mayastor-api" }
version-info = { path = "../utils/io-engine-dependencies/version-info" }
io-engine = { path = "../io-engine" }

[dependencies.serde]
features = ["derive"]
version = "1.0.127"

[dependencies.spdk-rs]
path = "../spdk-rs"

[dependencies.sysfs]
path = "../sysfs"

[dependencies.tokio]
features = ["full"]
version = "1.10.0"

[dependencies.uuid]
features = ["v4"]
version = "0.8.2"
