[package]
name = "io-engine-tests"
description = "I/O test support library"
version = "0.1.0"
edition = "2018"

[dependencies]
ansi_term = "0.12.1"
async-channel = "1.9.0"
async-task = "4.4.1"
async-trait = "0.1.73"
bincode = "1.3.3"
byte-unit = "4.0.19"
bytes = "1.5.0"
chrono = "0.4.31"
colored_json = "3.3.0"
crossbeam = "0.8.2"
etcd-client = "0.12.1"
function_name = "0.3.0"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
io-uring = "0.6.2"
ioctl-gen = "0.1.1"
jsonrpc = { path = "../jsonrpc"}
lazy_static = "1.4.0"
libc = "0.2.149"
log = "0.4.20"
md5 = "0.7.0"
merge = "0.1.0"
nix = "0.27.1"
once_cell = "1.18.0"
parking_lot = "0.12.1"
pin-utils = "0.1.0"
proc-mounts = "0.3.0"
prost = "0.12.1"
prost-derive = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.0"
run_script = "0.10.1"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
sha2 = "0.10.8"
signal-hook = "0.3.17"
snafu = "0.7.5"
tonic = "0.10.2"
tower = "0.4.13"
tracing = "0.1.37"
tracing-core = "0.1.31"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
udev = "0.8.0"
url = "2.4.1"

composer = { path = "../utils/dependencies/composer" }
libnvme-rs = { path = "../libnvme-rs" }
io-engine-api = { path = "../utils/dependencies/apis/io-engine" }
version-info = { path = "../utils/dependencies/version-info" }
io-engine = { path = "../io-engine" }
io-engine-tests-macros = { path = "./io-engine-tests-macros" }

[dependencies.serde]
features = ["derive"]
version = "1.0.188"

[dependencies.spdk-rs]
path = "../spdk-rs"

[dependencies.sysfs]
path = "../sysfs"

[dependencies.tokio]
features = ["full"]
version = "1.33.0"

[dependencies.uuid]
features = ["v4"]
version = "1.4.1"
