[package]
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"
name = "io-engine"
description = "Engine responsible for managing I/Os"
version = "1.0.0"
default-run = "io-engine-client"

[features]
default = ["spdk-async-qpair-connect"]
io-engine-testing = ["fault-injection"]
extended-tests = [] # Extended I/O engine tests: not intended for daily runs.
fault-injection = [] # Enables fault injection code.
nexus-io-tracing = [] # Enables nexus I/O tracing code.
spdk-async-qpair-connect = [] # Enables async qpair connection.

[[bin]]
name = "io-engine"
path = "src/bin/io-engine.rs"

[[bin]]
name = "spdk"
path = "src/bin/spdk.rs"

[[bin]]
name = "initiator"
path = "src/bin/initiator.rs"

[[bin]]
name = "uring-support"
path = "src/bin/uring-support.rs"

[[bin]]
name = "io-engine-client"
path = "src/bin/io-engine-client/main.rs"

[[bin]]
name = "jsonrpc"
path = "src/bin/jsonrpc.rs"

[[bin]]
name = "casperf"
path = "src/bin/casperf.rs"

[[example]]
name = "lvs-eval"
path = "examples/lvs-eval/main.rs"

[dependencies]
ansi_term = "0.12.1"
async-channel = "1.9.0"
async-task = "4.4.1"
async-trait = "0.1.73"
bit-vec = "0.6.3"
bincode = "1.3.3"
byte-unit = "4.0.19"
bytes = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["color", "derive", "string", "env"] }
colored_json = "4.0.0"
crossbeam = "0.8.2"
derive_builder = "0.12.0"
env_logger = "0.10.0"
etcd-client = "0.12.1"
function_name = "0.3.0"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
humantime = "2.1.0"
io-uring = "0.6.2"
ioctl-gen = "0.1.1"
lazy_static = "1.4.0"
libc = "0.2.149"
log = "0.4.20"
md5 = "0.7.0"
merge = "0.1.0"
nix = { version = "0.27.1", default-features = false, features = [ "hostname", "net", "socket", "ioctl" ] }
once_cell = "1.18.0"
parking_lot = "0.12.1"
pin-utils = "0.1.0"
prost = "0.12.1"
prost-derive = "0.12.1"
rand = "0.8.5"
regex = "1.10.0"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
sha2 = "0.10.8"
signal-hook = "0.3.17"
snafu = "0.7.5"
strum = "0.25"
strum_macros = "0.25"
tonic = "0.10.2"
tower = "0.4.13"
tracing = "0.1.37"
tracing-core = "0.1.31"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
udev = "0.8.0"
url = "2.4.1"
gettid = "0.1.2"
async-process = { version = "1.8.1" }
rstack = { version = "0.3.3" }
tokio-stream = "0.1.14"
rustls = "0.21.12"

devinfo = { path = "../utils/dependencies/devinfo" }
jsonrpc = { path = "../jsonrpc"}
io-engine-api = { path = "../utils/dependencies/apis/io-engine" }
spdk-rs = { path = "../spdk-rs" }
sysfs = { path = "../sysfs" }
version-info = { path = "../utils/dependencies/version-info", features = ["deps-logs-head"] }
events-api = { path = "../utils/dependencies/apis/events" }
event-publisher = { path = "../utils/dependencies/event-publisher" }
tracing-filter = { path = "../utils/dependencies/tracing-filter" }

[dependencies.serde]
features = ["derive"]
version = "1.0.188"

[dependencies.tokio]
features = ["full"]
version = "1.33.0"

[dependencies.uuid]
features = ["v4"]
version = "1.4.1"

[dev-dependencies]
assert_matches = "1.5.0"
io-engine-tests = { path = "../io-engine-tests" }
libnvme-rs = { path = "../libnvme-rs", version = "0.1.0" }
prettytable-rs = "0.10.0"
run_script = "0.10.1"
