[package]
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"
name = "jsonrpc"
version = "0.1.0"

[dependencies]
nix = "0.22.1"
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
tonic = "0.5.2"
tokio = { version = "1.10.0", features = ["full"] }
tracing = "0.1.26"

