[package]
name = "libnvme-rs"
description = "Rust bindings for libnvme"
version = "0.1.0"
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
authors = [
  "Jonathan Teh <jonathan.teh@mayadata.io>",
  "Jeffry Molanus <jeffry.molanus@gmail.com>",
]

[build-dependencies]
bindgen = "0.68.1"
cc = "1.0.83"

[dependencies]
glob = "0.3.1"
libc = "0.2"
snafu = "0.7.5"
url = "2.4.1"

[dependencies.mio08]
package = "mio"
features = ["os-ext"]
version = "0.8"

[dependencies.udev]
features = ["hwdb", "mio"]
version = "^0.8.0"
