[package]
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"
name = "mayastor"
version = "0.1.0"

[[bin]]
name = "mayastor"
path = "src/bin/main.rs"

[[bin]]
name = "spdk"
path = "src/bin/spdk.rs"

[[bin]]
name = "initiator"
path = "src/bin/initiator.rs"

[[bin]]
name = "uring-support"
path = "src/bin/uring-support.rs"

[[bin]]
name = "mayastor-client"
path = "src/bin/cli/cli.rs"

[[bin]]
name = "jsonrpc"
path = "src/bin/jsonrpc.rs"

[[bin]]
name = "casperf"
path = "src/bin/casperf.rs"

[dependencies]
async-task = "3.0"
async-trait = "0.1.36"
bincode = "1.2"
byte-unit = "3.0.1"
bytes = "0.4.12"
chrono = "0.4"
clap = "2.33.0"
colored_json = "*"
crc = "1.8.1"
crossbeam = "0.7.3"
crossbeam-sync = "0.0.0"
env_logger = "0.7"
futures = "0.3"
futures-timer = "2.0"
git-version = "0.3"
io-uring = "0.3.4"
ioctl-gen = "0.1.1"
jsonrpc = { path = "../jsonrpc"}
libc = "0.2"
log = "0.4"
nix = "0.16"
once_cell = "1.3.1"
pin-utils = "0.1"
prost = "0.6"
prost-derive = "0.6"
prost-types = "0.6"
rand = "0.7.3"
serde_json = "1.0"
serde_yaml = "0.8"
signal-hook = "0.1"
snafu = "0.6"
structopt = "0.3.11"
nats = "0.7.4"
tonic = "0.1"
tower = "0.3"
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.0"
url = "2.1"

[dependencies.rpc]
path = "../rpc"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.spdk-sys]
path = "../spdk-sys"

[dependencies.sysfs]
path = "../sysfs"

[dependencies.tokio]
features = ["full"]
version = "0.2"

[dependencies.uuid]
features = ["v4"]
version = "0.7"

[dev-dependencies]
assert_matches = "1.2"
run_script = "*"
