[package]
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"
name = "mayastor"
version = "0.1.0"
default-run = "mayastor-client"

[[bin]]
name = "mayastor"
path = "src/bin/mayastor.rs"

[[bin]]
name = "spdk"
path = "src/bin/spdk.rs"

[[bin]]
name = "initiator"
path = "src/bin/initiator.rs"

[[bin]]
name = "uring-support"
path = "src/bin/uring-support.rs"

[[bin]]
name = "mayastor-client"
path = "src/bin/mayastor-client/main.rs"

[[bin]]
name = "jsonrpc"
path = "src/bin/jsonrpc.rs"

[[bin]]
name = "casperf"
path = "src/bin/casperf.rs"

[dependencies]
ansi_term = "0.12"
async-task = "4.0.2"
async-trait = "0.1.36"
atty = "0.2"
bincode = "1.2"
byte-unit = "3.0.1"
bytes = "0.4"  # We are blocked on updating http until we update tonic.
chrono = "0.4"
clap = "2.33.0"
colored_json = "*"
crc = "1.8.1"
crossbeam = "0.7.3"
crossbeam-sync = "0.0.0"
env_logger = "0.7"
futures = "0.3"
futures-timer = "2.0"
git-version = "0.3"
http = "0.1" # We are blocked on updating http until we update tonic.
io-uring = "0.4.0"
ioctl-gen = "0.1.1"
jsonrpc = { path = "../jsonrpc"}
libc = "0.2"
log = "0.4"
nix = "0.16"
once_cell = "1.3.1"
pin-utils = "0.1"
proc-mounts = "0.2"
prost = "0.6"
prost-derive = "0.6"
prost-types = "0.6"
rand = "0.7.3"
serde_json = "1.0"
serde_yaml = "0.8"
signal-hook = "0.1"
snafu = "0.6"
structopt = "0.3.11"
nats = "0.8"
tonic = "0.1"
tower = "0.3"
tracing = "0.1"
tracing-core = "0.1"
tracing-futures = "0.2.4"
tracing-log = "0.1"
tracing-subscriber = "0.2"
udev = "0.4"
url = "2.1"
smol = "1.0.0"
dns-lookup = "1.0.4"
ipnetwork = "0.17.0"
bollard = "0.8.0"
mbus_api = { path = "../control-plane/mbus-api" }
nvmeadm = {path = "../nvmeadm", version = "0.1.0"}

[dependencies.rpc]
path = "../rpc"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.spdk-sys]
path = "../spdk-sys"

[dependencies.sysfs]
path = "../sysfs"

[dependencies.tokio]
features = ["full"]
version = "0.2"

[dependencies.uuid]
features = ["v4"]
version = "0.7"

[dev-dependencies]
assert_matches = "1.2"
run_script = "*"
composer = { path = "../composer" }
