[package]
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"
name = "mayastor"
version = "1.0.0"
default-run = "mayastor-client"
build = "build.rs"

[[bin]]
name = "mayastor"
path = "src/bin/mayastor.rs"

[[bin]]
name = "spdk"
path = "src/bin/spdk.rs"

[[bin]]
name = "initiator"
path = "src/bin/initiator.rs"

[[bin]]
name = "uring-support"
path = "src/bin/uring-support.rs"

[[bin]]
name = "mayastor-client"
path = "src/bin/mayastor-client/main.rs"

[[bin]]
name = "jsonrpc"
path = "src/bin/jsonrpc.rs"

[[bin]]
name = "casperf"
path = "src/bin/casperf.rs"

[dependencies]
ansi_term = "0.12.1"
async-task = "4.0.3"
async-trait = "0.1.51"
atty = "0.2.14"
bincode = "1.3.3"
byte-unit = "4.0.12"
bytes = "1.0.1"
chrono = "0.4.19"
clap = "2.33.3"
colored_json = "2.1.0"
crc = "1.8.1"
crossbeam = "0.8.1"
crossbeam-sync = "0.0.0"
env_logger = "0.9.0"
function_name = "0.2.0"
futures = "0.3.16"
git-version = "0.3.5"
http = "0.2.4"
io-uring = "0.5.1"
ioctl-gen = "0.1.1"
jsonrpc = { path = "../jsonrpc"}
lazy_static = "1.4.0"
libc = "0.2.99"
log = "0.4.14"
nix = "0.22.1"
md5 = "0.7.0"
merge = "0.1.0"
once_cell = "1.8.0"
pin-utils = "0.1.0"
proc-mounts = "0.2.4"
prost = "0.8.0"
prost-derive = "0.8.0"
prost-types = "0.8.0"
rand = "0.8.4"
serde_json = "1.0.66"
serde_yaml = "0.8.18"
signal-hook = "0.3.9"
snafu = "0.6.10"
structopt = "0.3.22"
tonic = "0.5.2"
tower = "0.4.8"
tracing = "0.1.26"
tracing-core = "0.1.19"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.20"
udev = "0.6.2"
url = "2.2.2"
async-channel = "1.6.1"
dns-lookup = "1.0.8"
etcd-client = "0.7.1"
parking_lot = "0.11.1"

[dependencies.rpc]
path = "../rpc"

[dependencies.serde]
features = ["derive"]
version = "1.0.127"

[dependencies.spdk-rs]
path = "../spdk-rs"

[dependencies.sysfs]
path = "../sysfs"

[dependencies.tokio]
features = ["full"]
version = "1.10.0"

[dependencies.uuid]
features = ["v4"]
version = "0.8.2"

[dev-dependencies]
assert_matches = "1.5.0"
composer = { path = "../composer" }
libnvme-rs = {path = "../libnvme-rs", version = "0.1.0"}
run_script = "0.8.0"
