[package]
name = "mbus_api"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

[dependencies]
nats = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
async-trait = "0.1.36"
dyn-clonable = "0.9.0"
smol = "1.0.0"
once_cell = "1.4.1"
snafu = "0.6"
strum = "0.19"
strum_macros = "0.19"
tracing = "0.1"
percent-encoding = "2.1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
composer = { path = "../composer" }
rpc = { git = "https://github.com/gila/rpc", branch = "master" }

[dependencies.serde]
features = ["derive"]
version = "1.0"
