[package]
name = "mbus_api"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

[dependencies]
nats = "0.13.0"
tokio = { version = "1.10.0", features = ["full"] }
futures = "0.3.16"
serde_json = "1.0.66"
async-trait = "0.1.51"
dyn-clonable = "0.9.0"
once_cell = "1.8.0"
snafu = "0.6.10"
strum = "0.21.0"
strum_macros = "0.21.1"
tracing = "0.1.26"
percent-encoding = "2.1.0"
uuid = { version = "0.8.2", features = ["v4"] }
async-nats = "0.10.1"

[dev-dependencies]
composer = { path = "../composer" }
rpc = { path = "../rpc" }

[dependencies.serde]
features = ["derive"]
version = "1.0.127"
