[package]
name = "nvmeadm"
version = "0.1.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
derive_builder = "0.7"
enum-primitive-derive = "^0.1"
glob = "*"
ioctl-gen = "0.1"
libc = "0.2"
nix = "0.14"
num-traits = "^0.1"
once_cell = "1.3"
snafu = "0.6"
uuid = { version = "0.7", features = ["v4"] }
url = "2.2.0"
