[package]
name = "nvmeadm"
version = "1.0.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"

[dependencies]
derive_builder = "0.10.2"
enum-primitive-derive = "0.2.1"
glob = "0.3.0"
ioctl-gen = "0.1.1"
libc = "0.2.99"
nix = "0.22.1"
num-traits = "0.2.14"
once_cell = "1.8.0"
snafu = "0.6.10"
uuid = { version = "0.8.2", features = ["v4"] }
url = "2.2.2"
