[package]
name = "rpc"
version = "0.1.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"

[build-dependencies]
tonic-build = "0.1.0"
prost-build = "0.6.0"

[dependencies]
tonic = "0.1.0"
bytes = "0.5"
prost = "0.6"
prost-derive = "0.6"
serde = { version = "1.0.98", features = ["derive"] }
serde_derive = "1.0.99"
serde_json = "1.0.40"
