[package]
name = "rpc"
version = "0.1.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"

[build-dependencies]
tonic-build = "0.5.2"
prost-build = "0.8.0"

[dependencies]
tonic = "0.5.2"
bytes = "1.0.1"
prost = "0.8.0"
prost-derive = "0.8.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
