[package]
name = "services"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

[lib]
name = "common"
path = "common/src/lib.rs"

[dependencies]
mbus_api = { path = "../mbus-api" }
nats = "0.8"
structopt = "0.3.15"
log = "0.4.11"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.6"
env_logger = "0.7"
serde_json = "1.0"
async-trait = "0.1.36"
dyn-clonable = "0.9.0"
smol = "1.0.0"
snafu = "0.6"


[dependencies.serde]
features = ["derive"]
version = "1.0"