[package]
name = "spdk-rs"
description = "Rust bindings for SPDK library"
version = "0.1.0"
edition = "2018"
links = "spdk"
build = "build.rs"
license = "MIT"
authors = [
  "Jeffry Molanus <jeffry.molanus@gmail.com>",
  "Jan Kryl <jan.kryl@mayadata.io>",
  "Dmitry Savitskiy <dmitry.savitsky@mayadata.io>",
]

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.69"

[dependencies]
futures = "0.3.16"
nix = "0.22.1"
serde_json = "1.0.66"
snafu = "0.6.10"
tracing = "0.1.26"

[dependencies.serde]
features = ["derive"]
version = "1.0.127"

[dependencies.uuid]
features = ["v4"]
version = "0.8"
