[package]
name = "spdk-sys"
description = "Rust bindings for SPDK library"
version = "0.1.0"
edition = "2018"
links = "spdk"
build = "build.rs"
license = "MIT"
authors = [
  "Jeffry Molanus <jeffry.molanus@gmail.com>",
  "Jan Kryl <jan.kryl@mayadata.io>",
]

[build-dependencies]
bindgen = "0.47"
cc = "1.0"
