[package]
name = "spdk-sys"
description = "Rust bindings for SPDK library"
version = "1.0.0"
edition = "2018"
links = "spdk"
build = "build.rs"
license = "MIT"
authors = [
  "Jeffry Molanus <jeffry.molanus@gmail.com>",
  "Jan Kryl <jan.kryl@mayadata.io>",
]

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.69"
