[package]
name = "agents"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

[[bin]]
name = "kiiss"
path = "kiiss/src/server.rs"

[[bin]]
name = "node"
path = "node/src/server.rs"

[[bin]]
name = "pool"
path = "pool/src/server.rs"

[[bin]]
name = "volume"
path = "volume/src/server.rs"

[[bin]]
name = "jsongrpc"
path = "jsongrpc/src/server.rs"


[lib]
name = "common"
path = "common/src/lib.rs"

[dependencies]
mbus_api = { path = "../mbus-api" }
nats = "0.8"
structopt = "0.3.15"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1"
futures = "0.3.6"
serde_json = "1.0"
async-trait = "0.1.36"
dyn-clonable = "0.9.0"
smol = "1.0.0"
snafu = "0.6"
lazy_static = "1.4.0"
humantime = "2.0.1"
state = "0.4.2"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
rpc = { path = "../../rpc" }
url = "2.2.0"
http = "0.2.1"

[dev-dependencies]
composer = { path = "../../composer" }

[dependencies.serde]
features = ["derive"]
version = "1.0"
