[package]
name = "mbus_api"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

[dependencies]
nats = "0.8"
structopt = "0.3.15"
log = "0.4.11"
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7"
serde_json = "1.0"
async-trait = "0.1.36"
dyn-clonable = "0.9.0"
smol = "1.0.0"
once_cell = "1.4.1"
snafu = "0.6"
strum = "0.19"
strum_macros = "0.19"
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.0"
paperclip = { version = "0.5.0", features = ["actix3"] }
percent-encoding = "2.1.0"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
composer = { path = "../../composer" }
rpc = { path = "../../rpc" }

[dependencies.serde]
features = ["derive"]
version = "1.0"