[package]
name = "operators"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node-op"
path = "node/src/main.rs"

[dependencies]
rustls = "0.18"
actix-web = { version = "3.2.0", features = ["rustls"] }
serde_json = "1.0"
structopt = "0.3.15"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.32"
mbus_api = { path = "../mbus-api" }
strum = "0.19"
humantime = "2.0.1"
kube = "0.43.0"
kube-runtime = "0.43.0"
kube-derive = "0.43.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_18"] }
either = "1.6.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
opentelemetry-jaeger = { version = "0.10", features = ["tokio"] }
opentelemetry = "0.11.2"
rest = { path = "../rest" }

[dependencies.serde]
features = ["derive"]
version = "1.0"